// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Watermark Watermark baseVue demo works fine 1`] = `
<div
  class="t-watermark"
  style="position: relative; overflow: hidden; width: 100%;"
>
  <div
    style="height: 300px;"
  />
  <div
    style="position: absolute; left: 0px; right: 0px; top: 0px; bottom: 0px; width: 100%; height: 100%; background-size: 200px; pointer-events: none; background-repeat: repeat; background-image: url(); animation: none;"
  />
</div>
`;

exports[`Watermark Watermark graylevelVue demo works fine 1`] = `
<div
  class="t-watermark"
  style="position: relative; overflow: hidden; width: 100%;"
>
  <div
    style="height: 300px;"
  />
  <div
    style="position: absolute; left: 0px; right: 0px; top: 0px; bottom: 0px; width: 100%; height: 100%; background-size: 258px; pointer-events: none; background-repeat: repeat; background-image: url(); animation: none;"
  />
</div>
`;

exports[`Watermark Watermark imageVue demo works fine 1`] = `
<div
  class="t-watermark"
  style="position: relative; overflow: hidden; width: 100%;"
>
  <div
    style="height: 300px;"
  />
  <div
    style="position: absolute; left: 0px; right: 0px; top: 0px; bottom: 0px; width: 100%; height: 100%; background-size: 194px; pointer-events: none; background-repeat: repeat; background-image: url(); animation: none;"
  />
</div>
`;

exports[`Watermark Watermark movingImageVue demo works fine 1`] = `
<div
  class="t-watermark"
  style="position: relative; overflow: hidden; width: 100%;"
>
  <div
    style="height: 300px;"
  />
  <div
    style="position: absolute; left: 0px; right: 0px; top: 0px; bottom: 0px; width: 100%; height: 100%; background-size: 158px; pointer-events: none; background-repeat: no-repeat; background-image: url(); animation: watermark infinite 200s;"
  />
</div>
`;

exports[`Watermark Watermark movingTextVue demo works fine 1`] = `
<div
  class="t-watermark"
  style="position: relative; overflow: hidden; width: 100%;"
>
  <div
    style="height: 300px;"
  />
  <div
    style="position: absolute; left: 0px; right: 0px; top: 0px; bottom: 0px; width: 100%; height: 100%; background-size: 120px; pointer-events: none; background-repeat: no-repeat; background-image: url(); animation: watermark infinite 200s;"
  />
</div>
`;

exports[`Watermark Watermark multilineVue demo works fine 1`] = `
<div
  class="t-watermark"
  style="position: relative; overflow: hidden; width: 100%;"
>
  <div
    style="height: 300px;"
  />
  <div
    style="position: absolute; left: 0px; right: 0px; top: 0px; bottom: 0px; width: 100%; height: 100%; background-size: 258px; pointer-events: none; background-repeat: repeat; background-image: url(); animation: none;"
  />
</div>
`;
